force-app/main/default/objects/Request_for_Quote__c/fields/Other_Finishing__c.field-meta.xml
<CustomField>
    <fullName>Other_Finishing__c</fullName>
    <label>Other Finishing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>