force-app/main/default/objects/Request_for_Quote__c/fields/Other_How_will_Sleeves_be_applied__c.field-meta.xml
<CustomField>
    <fullName>Other_How_will_Sleeves_be_applied__c</fullName>
    <label>Other How will Sleeves be applied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>