force-app/main/default/objects/Request_for_Quote__c/fields/Other_Overs_Unders__c.field-meta.xml
<CustomField>
    <fullName>Other_Overs_Unders__c</fullName>
    <label>Other Overs/Unders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>