force-app/main/default/objects/Request_for_Quote__c/fields/Other_Packaging_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Other_Packaging_Requirements__c</fullName>
    <label>Other Packaging Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>