force-app/main/default/objects/Request_for_Quote__c/fields/Other_Perforation__c.field-meta.xml
<CustomField>
    <fullName>Other_Perforation__c</fullName>
    <label>Other Perforation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>