force-app/main/default/objects/Request_for_Quote__c/fields/Other_Quality_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Other_Quality_Requirements__c</fullName>
    <label>Other Quality Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>