force-app/main/default/objects/Request_for_Quote__c/fields/Other_Soft_touch_or_Matte_varnish__c.field-meta.xml
<CustomField>
    <fullName>Other_Soft_touch_or_Matte_varnish__c</fullName>
    <label>Other Soft-touch or Matte varnish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>