force-app/main/default/objects/Request_for_Quote__c/fields/Other_Text__c.field-meta.xml
<CustomField>
    <fullName>Other_Text__c</fullName>
    <label>Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>