force-app/main/default/objects/Request_for_Quote__c/fields/Other_When_are_sleeves_being_applied__c.field-meta.xml
<CustomField>
    <fullName>Other_When_are_sleeves_being_applied__c</fullName>
    <label>Other When are sleeves being applied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>