force-app/main/default/objects/Request_for_Quote__c/fields/Overlap__c.field-meta.xml
<CustomField>
    <fullName>Overlap__c</fullName>
    <label>Overlap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>