force-app/main/default/objects/Request_for_Quote__c/fields/Overs_Unders__c.field-meta.xml
<CustomField>
    <fullName>Overs_Unders__c</fullName>
    <label>Overs / Unders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10/10</fullName>
            </value>
            <value>
                <fullName>5/5</fullName>
            </value>
            <value>
                <fullName>0/10</fullName>
            </value>
            <value>
                <fullName>0/5</fullName>
            </value>
            <value>
                <fullName>0/0</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>