force-app/main/default/objects/Request_for_Quote__c/fields/Oxygen_Barrier_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Oxygen_Barrier_Requirement__c</fullName>
    <label>Oxygen Barrier Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>