force-app/main/default/objects/Request_for_Quote__c/fields/Packaging_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Requirements__c</fullName>
    <label>Packaging Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boxes</fullName>
            </value>
            <value>
                <fullName>Gaylord (Skid Packed)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>