force-app/main/default/objects/Request_for_Quote__c/fields/Perforation__c.field-meta.xml
<CustomField>
    <fullName>Perforation__c</fullName>
    <label>Perforation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T Perf</fullName>
            </value>
            <value>
                <fullName>Vertial Perf</fullName>
            </value>
            <value>
                <fullName>Dual Vertical Perf</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>