force-app/main/default/objects/Request_for_Quote__c/fields/Perforation_between_labels__c.field-meta.xml
<CustomField>
    <fullName>Perforation_between_labels__c</fullName>
    <label>Perforation between labels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N</valueSetName>
    </valueSet>
</CustomField>