force-app/main/default/objects/Request_for_Quote__c/fields/Prerequisite_Color__c.field-meta.xml
<CustomField>
    <fullName>Prerequisite_Color__c</fullName>
    <formula>False</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prerequisite Color</label>
    <type>Checkbox</type>
</CustomField>