force-app/main/default/objects/Request_for_Quote__c/fields/Print_Location__c.field-meta.xml
<CustomField>
    <fullName>Print_Location__c</fullName>
    <label>Print Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>NY</fullName>
            </value>
            <value>
                <fullName>OH</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>STL</fullName>
            </value>
            <value>
                <fullName>TN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>