force-app/main/default/objects/Request_for_Quote__c/fields/Print_Method__c.field-meta.xml
<CustomField>
    <fullName>Print_Method__c</fullName>
    <label>Print Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flexo</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Best</fullName>
            </value>
            <value>
                <fullName>Gravure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>