force-app/main/default/objects/Request_for_Quote__c/fields/Printed_Web__c.field-meta.xml
<CustomField>
    <fullName>Printed_Web__c</fullName>
    <label>Printed Web</label>
    <length>255</length>
    <type>Text</type>
</CustomField>