force-app/main/default/objects/Request_for_Quote__c/fields/Quality_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Quality_Requirements__c</fullName>
    <label>Quality Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Color Critical</fullName>
            </value>
            <value>
                <fullName>Color Scoring (gmi, color cert, etc)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>