force-app/main/default/objects/Request_for_Quote__c/fields/Quantity_1__c.field-meta.xml
<CustomField>
    <fullName>Quantity_1__c</fullName>
    <label>Quantity 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>