force-app/main/default/objects/Request_for_Quote__c/fields/Rotary_Screen_Tactile__c.field-meta.xml
<CustomField>
    <fullName>Rotary_Screen_Tactile__c</fullName>
    <label>Rotary Screen Tactile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>