force-app/main/default/objects/Request_for_Quote__c/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <formula>Opportunity__r.Owner.FirstName &amp;&quot; &quot;&amp; Opportunity__r.Owner.LastName</formula>
    <label>Sales Person</label>
    <type>Text</type>
</CustomField>