force-app/main/default/objects/Request_for_Quote__c/fields/Seam_Wind__c.field-meta.xml
<CustomField>
    <fullName>Seam_Wind__c</fullName>
    <label>Seam Wind</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seam In</fullName>
            </value>
            <value>
                <fullName>Seam Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>