force-app/main/default/objects/Request_for_Quote__c/fields/Service_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Service_Temperature__c</fullName>
    <label>Service Temperature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>