force-app/main/default/objects/Request_for_Quote__c/fields/Ship_to_Location__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Location__c</fullName>
    <label>Ship to Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>