force-app/main/default/objects/Request_for_Quote__c/fields/Specialties__c.field-meta.xml
<CustomField>
    <fullName>Specialties__c</fullName>
    <label>Specialties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emboss</fullName>
            </value>
            <value>
                <fullName>Hot Stamp</fullName>
            </value>
            <value>
                <fullName>Cold Foil</fullName>
            </value>
            <value>
                <fullName>Re-insertion</fullName>
            </value>
            <value>
                <fullName>JeftFX</fullName>
            </value>
            <value>
                <fullName>Variable Data</fullName>
            </value>
            <value>
                <fullName>Turnbar Required (printing both sides of the material)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>