force-app/main/default/objects/Request_for_Quote__c/fields/Spot__c.field-meta.xml
<CustomField>
    <fullName>Spot__c</fullName>
    <label>Spot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>