force-app/main/default/objects/Request_for_Quote__c/fields/Structure__c.field-meta.xml
<CustomField>
    <fullName>Structure__c</fullName>
    <label>Structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>