force-app/main/default/objects/Request_for_Quote__c/fields/Surface_Description__c.field-meta.xml
<CustomField>
    <fullName>Surface_Description__c</fullName>
    <label>Surface Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>