force-app/main/default/objects/Request_for_Quote__c/fields/Surface_Print_Floodcoat_Finish__c.field-meta.xml
<CustomField>
    <fullName>Surface_Print_Floodcoat_Finish__c</fullName>
    <label>Surface Print Floodcoat Finish</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gloss</fullName>
            </value>
            <value>
                <fullName>Matte</fullName>
            </value>
            <value>
                <fullName>Soft Touch Matte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>