force-app/main/default/objects/Request_for_Quote__c/fields/Target_Price__c.field-meta.xml
<CustomField>
    <fullName>Target_Price__c</fullName>
    <label>Target Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>