force-app/main/default/objects/Request_for_Quote__c/fields/Total_Gauge__c.field-meta.xml
<CustomField>
    <fullName>Total_Gauge__c</fullName>
    <label>Total Gauge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>