force-app/main/default/objects/Request_for_Quote__c/fields/Total_Ink_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Total_Ink_Coverage__c</fullName>
    <label>Total Ink Coverage %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>