force-app/main/default/objects/Request_for_Quote__c/fields/Total_Trim_Scrap__c.field-meta.xml
<CustomField>
    <fullName>Total_Trim_Scrap__c</fullName>
    <label>Total Trim Scrap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>