force-app/main/default/objects/Request_for_Quote__c/fields/Type_of_Printing__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Printing__c</fullName>
    <label>Type of Printing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sub Surface Print</fullName>
            </value>
            <value>
                <fullName>Surface Print</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>