force-app/main/default/objects/Request_for_Quote__c/fields/Unwind__c.field-meta.xml
<CustomField>
    <fullName>Unwind__c</fullName>
    <label>Unwind</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Top Off First Wound Out</fullName>
            </value>
            <value>
                <fullName>2 - Bottom Off First Wound Out</fullName>
            </value>
            <value>
                <fullName>3 - Right Off First Wound Out</fullName>
            </value>
            <value>
                <fullName>4 - Left Off First Wound Out</fullName>
            </value>
            <value>
                <fullName>5 - Top Off First Wound In</fullName>
            </value>
            <value>
                <fullName>6 - Bottom Off First Wound In</fullName>
            </value>
            <value>
                <fullName>7 - Right Off First Wound In</fullName>
            </value>
            <value>
                <fullName>8 - Left Off First Wound In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>