force-app/main/default/objects/Request_for_Quote__c/fields/Varnish_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Varnish_Coverage__c</fullName>
    <label>Varnish Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flood</fullName>
            </value>
            <value>
                <fullName>Spot</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>