force-app/main/default/objects/Request_for_Quote__c/fields/Varnish_Coverage_Other__c.field-meta.xml
<CustomField>
    <fullName>Varnish_Coverage_Other__c</fullName>
    <label>Varnish Coverage Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>