force-app/main/default/objects/Request_for_Quote__c/fields/VentHoles__c.field-meta.xml
<CustomField>
    <fullName>VentHoles__c</fullName>
    <label>VentHoles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>PunchOut</fullName>
            </value>
            <value>
                <fullName>Butterfly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>