force-app/main/default/objects/Request_for_Quote__c/fields/VentHoles_Other__c.field-meta.xml
<CustomField>
    <fullName>VentHoles_Other__c</fullName>
    <label>VentHoles Other</label>
    <type>TextArea</type>
</CustomField>