force-app/main/default/objects/Request_for_Quote__c/fields/Web_Width_x_Cutoff_repeat__c.field-meta.xml
<CustomField>
    <fullName>Web_Width_x_Cutoff_repeat__c</fullName>
    <label>Web Width x Cutoff (repeat)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>