force-app/main/default/objects/Request_for_Quote__c/fields/When_are_sleeves_being_applied__c.field-meta.xml
<CustomField>
    <fullName>When_are_sleeves_being_applied__c</fullName>
    <label>When are sleeves being applied</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sleeve applied before filling</fullName>
            </value>
            <value>
                <fullName>Sleeve applied after filling</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>