force-app/main/default/objects/Request_for_Quote__c/fields/White__c.field-meta.xml
<CustomField>
    <fullName>White__c</fullName>
    <label>White</label>
    <length>255</length>
    <type>Text</type>
</CustomField>