force-app/main/default/objects/Request_for_Quote__c/fields/Wicket_Cardboard__c.field-meta.xml
<CustomField>
    <fullName>Wicket_Cardboard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wicket Cardboard</label>
    <type>Checkbox</type>
</CustomField>