force-app/main/default/objects/Request_for_Quote__c/fields/Wicket_Cardboard_Location__c.field-meta.xml
<CustomField>
    <fullName>Wicket_Cardboard_Location__c</fullName>
    <label>Wicket Cardboard Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>