force-app/main/default/objects/Request_for_Quote__c/fields/Wicket_Land_Area__c.field-meta.xml
<CustomField>
    <fullName>Wicket_Land_Area__c</fullName>
    <label>Wicket Land Area</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>