force-app/main/default/objects/Request_for_Quote__c/fields/Wicket_Type__c.field-meta.xml
<CustomField>
    <fullName>Wicket_Type__c</fullName>
    <label>Wicket Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1/2 inch</fullName>
            </value>
            <value>
                <fullName>5/8 inch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>