force-app/main/default/objects/Request_for_Quote__c/fields/Wicket_Width__c.field-meta.xml
<CustomField>
    <fullName>Wicket_Width__c</fullName>
    <label>Wicket Width</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>