force-app/main/default/objects/Request_for_Quote__c/fields/Zipper__c.field-meta.xml
<CustomField>
    <fullName>Zipper__c</fullName>
    <label>Zipper</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard 10mm PTC</fullName>
            </value>
            <value>
                <fullName>Child Resistant</fullName>
            </value>
            <value>
                <fullName>Powder Proof</fullName>
            </value>
            <value>
                <fullName>Wide-Flange</fullName>
            </value>
            <value>
                <fullName>Linear Tear</fullName>
            </value>
            <value>
                <fullName>Pocket Zipper</fullName>
            </value>
            <value>
                <fullName>Audible Tactile</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>