force-app/main/default/objects/Request_for_Quote__c/recordTypes/Converted_Pouches.recordType-meta.xml
<RecordType>
    <fullName>Converted_Pouches</fullName>
    <active>false</active>
    <label>Converted Pouches</label>
</RecordType>