force-app/main/default/objects/Request_for_Quote__c/recordTypes/Flexible_Packaging_Converted_3_Side_Seal.recordType-meta.xml
<RecordType>
    <fullName>Flexible_Packaging_Converted_3_Side_Seal</fullName>
    <active>true</active>
    <label>Flexible Packaging - Converted - 3-Side Seal</label>
</RecordType>