force-app/main/default/objects/Request_for_Quote__c/recordTypes/Flexible_Packaging_Converted_Other.recordType-meta.xml
<RecordType>
    <fullName>Flexible_Packaging_Converted_Other</fullName>
    <active>true</active>
    <label>Flexible Packaging - Converted - Other</label>
</RecordType>