force-app/main/default/objects/Request_for_Quote__c/recordTypes/Flexible_Packaging_Converted_Pillow_Pouch.recordType-meta.xml
<RecordType>
    <fullName>Flexible_Packaging_Converted_Pillow_Pouch</fullName>
    <active>true</active>
    <label>Flexible Packaging - Converted - Pillow Pouch</label>
</RecordType>