force-app/main/default/objects/Request_for_Quote__c/recordTypes/Pouches.recordType-meta.xml
<RecordType>
    <fullName>Pouches</fullName>
    <active>true</active>
    <label>Flexible Packaging - Rolls</label>
</RecordType>