force-app/main/default/objects/Request_for_Quote__c/recordTypes/PS_ONLY.recordType-meta.xml
<RecordType>
    <fullName>PS_ONLY</fullName>
    <active>true</active>
    <label>Pressure Sensitive</label>
</RecordType>