force-app/main/default/objects/Request_for_Quote__c/recordTypes/Shrink_Only.recordType-meta.xml
<RecordType>
    <fullName>Shrink_Only</fullName>
    <active>true</active>
    <label>Shrink Sleeve</label>
</RecordType>