force-app/main/default/objects/Request_for_Quote__c/validationRules/Color_must_be_greater_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Color_must_be_greater_than_zero</fullName>
    <active>false</active>
    <description>Please complete the Color section before saving the RFQ</description>
    <errorConditionFormula>Prerequisite_Color__c =False</errorConditionFormula>
    <errorMessage>Please complete the Color section before saving the RFQ</errorMessage>
</ValidationRule>