force-app/main/default/objects/Request_for_Quote__c/validationRules/Compliance_Information.validationRule-meta.xml
<ValidationRule>
    <fullName>Compliance_Information</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR( RecordType.DeveloperName = &apos;Flexible_Packaging_Converted_3_Side_Seal&apos;, RecordType.DeveloperName = &apos;Flexible_Packaging_Converted_Other&apos;, RecordType.DeveloperName = &apos;Flexible_Packaging_Converted_Pillow_Pouch&apos;, RecordType.DeveloperName = &apos;Flexible_Packaging_Converted_Stand_Up_Pouch&apos;), ISPICKVAL( Compliance_Information__c , &apos;Other&apos;), ISBLANK( Other_Compliance_Information__c))</errorConditionFormula>
    <errorDisplayField>Other_Compliance_Information__c</errorDisplayField>
    <errorMessage>Compliance Information Other is required.</errorMessage>
</ValidationRule>