force-app/main/default/objects/Request_for_Quote__c/validationRules/Compliance_Regulation.validationRule-meta.xml
<ValidationRule>
    <fullName>Compliance_Regulation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR( RecordType.DeveloperName = &apos;Flexible_Packaging_Converted_3_Side_Seal&apos;, RecordType.DeveloperName = &apos;Flexible_Packaging_Converted_Other&apos;, RecordType.DeveloperName = &apos;Flexible_Packaging_Converted_Pillow_Pouch&apos;, RecordType.DeveloperName = &apos;Flexible_Packaging_Converted_Stand_Up_Pouch&apos;), ISPICKVAL( Compliance_Regulations__c , &apos;Other&apos;), ISBLANK( Other_Compliance_Regulations__c ))</errorConditionFormula>
    <errorDisplayField>Other_Compliance_Regulations__c</errorDisplayField>
    <errorMessage>Compliance Regulation Other is required.</errorMessage>
</ValidationRule>