force-app/main/default/objects/Request_for_Quote__c/validationRules/Finish.validationRule-meta.xml
<ValidationRule>
    <fullName>Finish</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR( RecordType.DeveloperName = &apos;Flexible_Packaging_Converted_3_Side_Seal&apos;, RecordType.DeveloperName = &apos;Flexible_Packaging_Converted_Other&apos;, RecordType.DeveloperName = &apos;Flexible_Packaging_Converted_Pillow_Pouch&apos;, RecordType.DeveloperName = &apos;Flexible_Packaging_Converted_Stand_Up_Pouch&apos;, RecordType.DeveloperName = &apos;PS_ONLY&apos;, RecordType.DeveloperName = &apos;Shrink_Only&apos;), INCLUDES(Finish__c, &apos;Other&apos;), ISBLANK( Other_Finish__c))</errorConditionFormula>
    <errorDisplayField>Other_Finish__c</errorDisplayField>
    <errorMessage>Finish Other is required.</errorMessage>
</ValidationRule>