force-app/main/default/objects/Request_for_Quote__c/validationRules/Handle_Style.validationRule-meta.xml
<ValidationRule>
    <fullName>Handle_Style</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	OR(
		RecordType.DeveloperName = &apos;Flexible_Packaging_Converted_3_Side_Seal&apos;, 
		RecordType.DeveloperName = &apos;Flexible_Packaging_Converted_Stand_Up_Pouch&apos;
	), 
	AND(
		NOT(ISBLANK(TEXT(Handle_Style__c ))),
		NOT(ISPICKVAL(Handle_Style__c, &apos;None&apos;))
	), 
	ISBLANK( Handle_Die_Cut_or_Punch__c ), 
	ISBLANK( Handle_Location__c)
)</errorConditionFormula>
    <errorMessage>Handle Die Cut or Punch and Handle Location are required.</errorMessage>
</ValidationRule>