force-app/main/default/objects/Request_for_Quote__c/validationRules/Header.validationRule-meta.xml
<ValidationRule>
    <fullName>Header</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR( RecordType.DeveloperName = &apos;Flexible_Packaging_Converted_3_Side_Seal&apos;, RecordType.DeveloperName = &apos;Flexible_Packaging_Converted_Stand_Up_Pouch&apos;), OR(ISPICKVAL( Header__c , &apos;Header&apos;), ISPICKVAL( Header__c , &apos;Reinforced Header&apos;)), ISBLANK( Header_Length_inches__c ))</errorConditionFormula>
    <errorDisplayField>Header_Length_inches__c</errorDisplayField>
    <errorMessage>Header Length is required.</errorMessage>
</ValidationRule>