force-app/main/default/objects/Request_for_Quote__c/validationRules/Lip.validationRule-meta.xml
<ValidationRule>
    <fullName>Lip</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR( RecordType.DeveloperName = &apos;Flexible_Packaging_Converted_3_Side_Seal&apos;, RecordType.DeveloperName = &apos;Flexible_Packaging_Converted_Stand_Up_Pouch&apos;), Lip__c , ISBLANK( Lip_Length_inches__c ))</errorConditionFormula>
    <errorDisplayField>Lip_Length_inches__c</errorDisplayField>
    <errorMessage>Lip Length is required.</errorMessage>
</ValidationRule>