force-app/main/default/objects/Request_for_Quote__c/validationRules/Quality_Requirements.validationRule-meta.xml
<ValidationRule>
    <fullName>Quality_Requirements</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Quality_Requirements__c , &apos;Other&apos;), ISBLANK( Other_Quality_Requirements__c))</errorConditionFormula>
    <errorDisplayField>Other_Finish__c</errorDisplayField>
    <errorMessage>Quality Requirements Other is required.</errorMessage>
</ValidationRule>